# hsm-stellar-hack

./: .gitignore  API_TESTING_GUIDE.md  COMPLETE_API_ENDPOINTS.md  COMPREHENSIVE_PROJECT_REVIEW.md  CURL_COMMANDS.sh  DOCKER_README.md  PROJECT_INDEX.md  QUICK_CURL_TESTS.txt  QUICK_REFERENCE.md  README.md  docker-compose.yml  docker-run.sh
.claude/: settings.local.json
.cursor/rules/: FINAL_ARCHITECTURE_SUMMARY.mdc  README.md  api-integrations.mdc  index.mdc  schema.mdc  security-practices.mdc  setup.mdc  stellar-custody-mvp.mdc  transaction-privacy.mdc
apps/backend/: .dockerignore  BACKEND_ARCHITECTURE.md  Dockerfile  _env.example  avatar-stellar-sticker.txt  package-lock.json  package.json  simulate-transaction.js  success.txt  totp.txt  tsconfig.json
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/scripts/: build.sh  hsm-sdk-check.ts  start.sh
apps/frontend/: .dockerignore  Dockerfile  env.example  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
contracts/custody/: .gitignore  Cargo.toml  DEPLOYMENT_SUMMARY.md  Makefile  README.md  build.sh  deploy-mainnet.sh  deploy-testnet.sh  env.example  initialize-testnet.sh  setup-env-vars.sh  test-contract-basic.sh  test-contract.sh
contracts/custody/src/: lib.rs
contracts/custody/test_snapshots/test/: test_create_transaction.1.json  test_initialize_contract.1.json  test_system_queries.1.json
docs/: CODE_REVIEW.md  COMMITS_PLAN.md  DOCKER_SETUP.md  FRONTEND_DOCKER_SUMMARY.md  HSM_SETUP.md  WORKFLOWS.md
init-db/: 01-init.sql
scripts/: dev-docker.sh
(+145 files in other folders)
