[package]
name = "stellar-custody-contract"
version = "1.0.0"
edition = "2021"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "23.0.2" }

[dev-dependencies]
soroban-sdk = { version = "23.0.2", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "stellar-custody-contract"
path = "src/bin/main.rs"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
